--- a/awake/awake.html
+++ b/awake/awake.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Who is awake?</title>
 </head>
 
 <body>
-    <button onclick="markToggle()">Mark</button>
-    <button onclick="cathyToggle()">Cathy</button>
+    <button onclick="cathyToggle()" style="height:100px;width:100px">Cathy</button>
+    <button onclick="markToggle()" style="height:100px;width:100px">Mark</button>
 
     <p></p>
     <span>Cathy: </span>
